--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <span id="width-value">00</span>
           </div>
           <div class="slider">
-            <label for="width-range">Grid Height</label>
-            <input type="range" id="width-range" min="1" max="35" />
+            <label for="height-range">Grid Height</label>
+            <input type="range" id="height-range" min="1" max="35" />
             <span id="height-value">00</span>
           </div>
         </div>
