--- a/index.html
+++ b/index.html
@@ -4,37 +4,83 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>#1 - Pixel Art Generator - | AsmrProg</title>
+    <title>#2 - Online Text Editor | AsmrProg</title>
   </head>
 
   <body>
-    <div class="wrapper">
+    <div class="container">
       <div class="options">
-        <div class="opt-wrapper">
-          <div class="slider">
-            <label for="width-range">Grid Width</label>
-            <input type="range" id="width-range" min="1" max="35" />
-            <span id="width-value">00</span>
-          </div>
-          <div class="slider">
-            <label for="height-range">Grid Height</label>
-            <input type="range" id="height-range" min="1" max="35" />
-            <span id="height-value">00</span>
-          </div>
+        <button id="bold" class="option-boton format">
+          <i class="fa-solid fa-bold"></i>
+        </button>
+        <button id="superscript" class="option-boton script">
+          <i class="fa-solid fa-superscript"></i>
+        </button>
+        <button id="insertOrderList" class="option-boton">
+          <div class="fa-solid fa-list-ol"></div>
+        </button>
+        <button id="insertUnderedList" class="option-boton">
+          <i class="fa-solid fa-list"></i>
+        </button>
+        <button id="insertOrderList" class="option-boton">
+          <div class="fa-solid fa-list-ol"></div>
+        </button>
+        <button id="undo" class="option-boton">
+          <i class="fa-solid fa-rotate-left"></i>
+        </button>
+        <button id="redo" class="option-boton">
+          <i class="fa-solid fa-rotate-right"></i>
+        </button>
+        <button id="createLink" class="adv-option-button">
+          <i class="fa fa-link"></i>
+        </button>
+        <button id="unlink" class="option-button">
+          <i class="fa fa-unlink"></i>
+        </button>
+        <button id="justifyLeft" class="option-button align">
+          <i class="fa-solid fa-align-left"></i>
+        </button>
+        <button id="justifyCenter" class="option-button align">
+          <i class="fa-solid fa-align-center"></i>
+        </button>
+        <button id="justifyRight" class="option-button align">
+          <i class="fa-solid fa-align-right"></i>
+        </button>
+        <button id="indent" class="option-button spacing">
+          <i class="fa-solid fa-indent"></i>
+        </button>
+        <button id="outdent" class="option-button spacing">
+          <i class="fa-solid fa-outdent"></i>
+        </button>
+        <select id="formatBlock" class="adv-option-boton">
+          <option value="H1">H1</option>
+          <option value="H2">H2</option>
+          <option value="H3">H3</option>
+          <option value="H4">H4</option>
+          <option value="H5">H5</option>
+          <option value="H6">H6</option>
+        </select>
+        <select name="fonstName" class="adv-option-boton"></select>
+        <select name="fontSize" class="adv-option-boton"></select>
+
+        <div class="input-wrapper">
+          <input type="color" id="foreColor" class="adv-option-botton" />
+          <label for="foreColor">Font Color</label>
         </div>
 
-        <div class="opt-wrapper">
-          <button id="submit-grid">Create Grid</button>
-          <button id="clear-grid">Clear Grid</button>
-          <input type="color" id="color-input" />
-          <button id="erase-btn">Erase</button>
-          <button id="paint-btn">Paint</button>
+        <div class="input-wrapper">
+          <input type="color" id="backColor" class="adv-option-boton" />
+          <label for="backColor">Highlight Color </label>
         </div>
       </div>
-      <div class="container"></div>
+      <div id="text-input" contenteditable="true"></div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
