--- a/index.html
+++ b/index.html
@@ -15,25 +15,22 @@
   <body>
     <div class="container">
       <div class="options">
-        <button id="bold" class="option-boton format">
+        <button id="bold" class="option-button format">
           <i class="fa-solid fa-bold"></i>
         </button>
-        <button id="superscript" class="option-boton script">
+        <button id="superscript" class="option-button script">
           <i class="fa-solid fa-superscript"></i>
         </button>
-        <button id="insertOrderList" class="option-boton">
+        <button id="insertOrderList" class="option-button">
           <div class="fa-solid fa-list-ol"></div>
         </button>
-        <button id="insertUnderedList" class="option-boton">
+        <button id="insertUnderedList" class="option-button">
           <i class="fa-solid fa-list"></i>
         </button>
-        <button id="insertOrderList" class="option-boton">
-          <div class="fa-solid fa-list-ol"></div>
-        </button>
-        <button id="undo" class="option-boton">
+        <button id="undo" class="option-button">
           <i class="fa-solid fa-rotate-left"></i>
         </button>
-        <button id="redo" class="option-boton">
+        <button id="redo" class="option-button">
           <i class="fa-solid fa-rotate-right"></i>
         </button>
         <button id="createLink" class="adv-option-button">
@@ -57,7 +54,7 @@
         <button id="outdent" class="option-button spacing">
           <i class="fa-solid fa-outdent"></i>
         </button>
-        <select id="formatBlock" class="adv-option-boton">
+        <select id="formatBlock" class="adv-option-button">
           <option value="H1">H1</option>
           <option value="H2">H2</option>
           <option value="H3">H3</option>
@@ -65,16 +62,16 @@
           <option value="H5">H5</option>
           <option value="H6">H6</option>
         </select>
-        <select name="fonstName" class="adv-option-boton"></select>
-        <select name="fontSize" class="adv-option-boton"></select>
+        <select name="fontName" class="adv-option-button"></select>
+        <select name="fontSize" class="adv-option-button"></select>
 
         <div class="input-wrapper">
-          <input type="color" id="foreColor" class="adv-option-botton" />
+          <input type="color" id="foreColor" class="adv-option-button" />
           <label for="foreColor">Font Color</label>
         </div>
 
         <div class="input-wrapper">
-          <input type="color" id="backColor" class="adv-option-boton" />
+          <input type="color" id="backColor" class="adv-option-button" />
           <label for="backColor">Highlight Color </label>
         </div>
       </div>
