fixing bugs, only one left, color of font or highlither is not working

--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
         <button id="superscript" class="option-button script">
           <i class="fa-solid fa-superscript"></i>
         </button>
+        <button id="subscript" class="option-button script">
+          <i class="fa-solid fa-subscript"></i>
+        </button>
         <button id="insertOrderList" class="option-button">
           <div class="fa-solid fa-list-ol"></div>
         </button>
-        <button id="insertUnderedList" class="option-button">
+        <button id="insertUnorderedList" class="option-button">
           <i class="fa-solid fa-list"></i>
         </button>
         <button id="undo" class="option-button">
@@ -62,8 +65,8 @@
           <option value="H5">H5</option>
           <option value="H6">H6</option>
         </select>
-        <select name="fontName" class="adv-option-button"></select>
-        <select name="fontSize" class="adv-option-button"></select>
+        <select id="fontName" class="adv-option-button"></select>
+        <select id="fontSize" class="adv-option-button"></select>
 
         <div class="input-wrapper">
           <input type="color" id="foreColor" class="adv-option-button" />
